freest/test/prog/Valid/Functional/EqDataAndCons/EqDataAndCons.fst
module EqDataAndCons where

-- type T : *T
data T = T

main : T
main = case T of T -> T
