freest/test/prog/Invalid/Kinding/KindMismatchLess/KindMismatchLess.fst
module KindMismatchLess where

type Bad : *T -> *T
type Bad = (->)
